--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -55,6 +55,65 @@
         "import optuna\n",
         "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set Prameters for Reproduciblity\n",
+        "pd.set_option(\"display.max_rows\",100)\n",
+        "FILE_PATH = \"/content/playground-series-s4e2/\"\n",
+        "TARGET = \"NObeyesdad\"\n",
+        "n_splits = 10\n",
+        "RANDOM_SEED = 43"
+      ],
+      "metadata": {
+        "id": "f-hqFcTgz6t3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# load all data\n",
+        "train = pd.read_csv(os.path.join(FILE_PATH, \"train.csv\"))\n",
+        "test = pd.read_csv(os.path.join(FILE_PATH, \"test.csv\"))\n",
+        "sample_sub = pd.read_csv(os.path.join(FILE_PATH, \"sample_submission.csv\"))\n",
+        "train_org = pd.read_csv(\"/content/obesity-or-cvd-risk-classifyregressorcluster/ObesityDataSet.csv\")"
+      ],
+      "metadata": {
+        "id": "-xVqatl3TwKF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def prettify_df(df):\n",
+        "    table = PrettyTable()\n",
+        "    table.field_names = df.columns\n",
+        "\n",
+        "    for row in df.values:\n",
+        "        table.add_row(row)\n",
+        "    print(table)"
+      ],
+      "metadata": {
+        "id": "BIHNBUR2T02Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train.head(10)"
+      ],
+      "metadata": {
+        "id": "DQ8fW7ljT27A"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
