Added table plotting

--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -114,6 +114,108 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Train Data\n",
+        "print(\"Train Data\")\n",
+        "print(f\"Total number of rows: {len(train)}\")\n",
+        "print(f\"Total number of columns: {train.shape[1]}\\n\")\n",
+        "\n",
+        "# Test Data\n",
+        "print(\"Test Data\")\n",
+        "print(f\"Total number of rows: {len(test)}\")\n",
+        "print(f\"Total number of columns:{test.shape[1]}\")"
+      ],
+      "metadata": {
+        "id": "nASKMNlMT6Cc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# check null and unique count\n",
+        "# FHWO: family_history_with_overweight\n",
+        "train_copy = train.rename(columns={\"family_history_with_overweight\":\"FHWO\"})\n",
+        "tmp = pd.DataFrame(index=train_copy.columns)\n",
+        "tmp['count'] = train_copy.count()\n",
+        "tmp['dtype'] = train_copy.dtypes\n",
+        "tmp['nunique'] = train_copy.nunique()\n",
+        "tmp['%nunique'] = (tmp['nunique']/len(train_copy))*100\n",
+        "tmp['%null'] = (train_copy.isnull().sum()/len(train_copy))*100\n",
+        "tmp['min'] = train_copy.min()\n",
+        "tmp['max'] = train_copy.max()\n",
+        "tmp\n",
+        "\n",
+        "tmp.reset_index(inplace=True)\n",
+        "tmp = tmp.rename(columns = {\"index\":\"Column Name\"})\n",
+        "tmp = tmp.round(3)\n",
+        "prettify_df(tmp)\n",
+        "del tmp, train_copy"
+      ],
+      "metadata": {
+        "id": "hw5U8kOkWXHq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Target Distribution with Gender\n",
+        "\n",
+        "pd.set_option('display.float_format', '{:.2f}'.format)\n",
+        "tmp = pd.DataFrame(train.groupby([TARGET,'Gender'])[\"id\"].agg('count'))\n",
+        "tmp.columns = ['Count']\n",
+        "train[TARGET].value_counts()\n",
+        "tmp = pd.merge(tmp,train[TARGET].value_counts(),left_index=True, right_index=True)\n",
+        "tmp.columns = ['gender_count','target_class_count']\n",
+        "tmp['%gender_count'] = tmp['gender_count']/tmp['target_class_count']\n",
+        "tmp[\"%target_class_count\"] = tmp['target_class_count']/len(train)\n",
+        "tmp = tmp[['gender_count','%gender_count','target_class_count','%target_class_count']]\n",
+        "print(\"Target Distribution with Gender\")\n",
+        "tmp"
+      ],
+      "metadata": {
+        "id": "vYz1OQnnWcDt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "raw_num_cols = list(train.select_dtypes(\"float\").columns)\n",
+        "raw_cat_cols = list(train.columns.drop(raw_num_cols+[TARGET]))\n",
+        "\n",
+        "full_form = dict({'FAVC' : \"Frequent consumption of high caloric food\",\n",
+        "                  'FCVC' : \"Frequency of consumption of vegetables\",\n",
+        "                  'NCP' :\"Number of main meal\",\n",
+        "                  'CAEC': \"Consumption of food between meals\",\n",
+        "                  'CH2O': \"Consumption of water daily\",\n",
+        "                  'SCC':  \"Calories consumption monitoring\",\n",
+        "                  'FAF': \"Physical activity frequency\",\n",
+        "                  'TUE': \"Time using technology devices\",\n",
+        "                  'CALC': \"Consumption of alcohol\" ,\n",
+        "                  'MTRANS' : \"Transportation used\"})"
+      ],
+      "metadata": {
+        "id": "XkpHmGm2WelC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JcYgLRI9WesN"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
