--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -210,9 +210,64 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "fig, axs = plt.subplots(1,2,figsize = (12,5))\n",
+        "plt.suptitle(\"Target Distribution\")\n",
+        "\n",
+        "sns.histplot(binwidth=0.5,x=TARGET,data=train,hue='Gender',palette=\"dark\",ax=axs[0],discrete=True)\n",
+        "axs[0].tick_params(axis='x', rotation=60)\n",
+        "\n",
+        "axs[1].pie(\n",
+        "        train[TARGET].value_counts(),\n",
+        "        shadow = True,\n",
+        "        explode=[.1 for i in range(train[TARGET].nunique())],\n",
+        "        labels = train[TARGET].value_counts().index,\n",
+        "        autopct='%1.f%%',\n",
+        "    )\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
       "metadata": {
         "id": "JcYgLRI9WesN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fig,axs = plt.subplots(len(raw_num_cols),1,figsize=(12,len(raw_num_cols)*2.5),sharex=False)\n",
+        "for i, col in enumerate(raw_num_cols):\n",
+        "    sns.violinplot(x=TARGET, y=col,hue=\"Gender\", data=train,ax = axs[i], split=False)\n",
+        "    if col in full_form.keys():\n",
+        "        axs[i].set_ylabel(full_form[col])\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "CuJhM4hos9Ji"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "_,axs = plt.subplots(int(len(raw_cat_cols)-1),2,figsize=(12,len(raw_cat_cols)*3),width_ratios=[1, 4])\n",
+        "for i,col in enumerate(raw_cat_cols[1:]):\n",
+        "    sns.countplot(y=col,data=train,palette=\"bright\",ax=axs[i,0])\n",
+        "    sns.countplot(x=col,data=train,hue=TARGET,palette=\"bright\",ax=axs[i,1])\n",
+        "    if col in full_form.keys():\n",
+        "        axs[i,0].set_ylabel(full_form[col])\n",
+        "\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "s5T4PFsLtAMU"
       },
       "execution_count": null,
       "outputs": []
