Added more visualization

--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -271,6 +271,80 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tmp = train[raw_num_cols].corr(\"pearson\")\n",
+        "sns.heatmap(tmp,annot=True,cmap =\"crest\")"
+      ],
+      "metadata": {
+        "id": "9-XCM4uCtEce"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.jointplot(data=train, x=\"Height\", y=\"Weight\", hue=TARGET,height=6)"
+      ],
+      "metadata": {
+        "id": "ubj9hlCiyjiG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.jointplot(data=train, x=\"Age\", y=\"Height\", hue=TARGET,height=6)"
+      ],
+      "metadata": {
+        "id": "Bh5gn2hPylHQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# PCA"
+      ],
+      "metadata": {
+        "id": "84530mFbyoTy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.cluster import KMeans\n",
+        "\n",
+        "#PCA\n",
+        "pca = PCA(n_components=2)\n",
+        "pca_top_2 = pca.fit_transform(train[raw_num_cols])\n",
+        "\n",
+        "tmp = pd.DataFrame(data = pca_top_2, columns = ['pca_1','pca_2'])\n",
+        "tmp['TARGET'] = train[TARGET]\n",
+        "\n",
+        "fig,axs = plt.subplots(2,1,figsize = (12,6))\n",
+        "sns.scatterplot(data=tmp, y=\"pca_1\", x=\"pca_2\", hue='TARGET',ax=axs[0])\n",
+        "axs[0].set_title(\"Top 2 Principal Components\")\n",
+        "\n",
+        "#KMeans\n",
+        "kmeans = KMeans(7,random_state=RANDOM_SEED)\n",
+        "kmeans.fit(tmp[['pca_1','pca_2']])\n",
+        "sns.scatterplot( y= tmp['pca_1'],x = tmp['pca_2'],c = kmeans.labels_,cmap='viridis', marker='o', edgecolor='k', s=50, alpha=0.8,ax = axs[1])\n",
+        "axs[1].set_title(\"Kmean Clustring on First 2 Principal Components\")\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "qfyQHBH5ynia"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
