Added feature engineering

--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "rCOKPdZ8yeKv",
         "colab": {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "f-hqFcTgz6t3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "-xVqatl3TwKF"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,7 +169,7 @@
       "metadata": {
         "id": "BIHNBUR2T02Y"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +185,7 @@
         },
         "outputId": "a384760b-7dcf-4610-bc5d-57db1fc00616"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -722,7 +722,7 @@
         },
         "outputId": "6d8f949d-93be-47c5-c04c-06d641873586"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -768,7 +768,7 @@
         },
         "outputId": "297b3bb2-3047-4b43-9474-2a4c57968d59"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -820,7 +820,7 @@
       "metadata": {
         "id": "XkpHmGm2WelC"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -851,7 +851,7 @@
         },
         "outputId": "5165bb3a-a94d-42b3-d895-999754f641bb"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -885,7 +885,7 @@
         },
         "outputId": "e8dd7144-3467-410a-e14b-044c8b28ec51"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -921,7 +921,7 @@
         },
         "outputId": "da3329a5-def5-48d9-b554-9df10f2d65f0"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -949,7 +949,7 @@
         },
         "outputId": "b9c76af5-5b39-4747-b279-7d46befc18a5"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -986,7 +986,7 @@
         "id": "ubj9hlCiyjiG",
         "outputId": "5857ab32-5f97-4041-f76f-8ae970a4a552"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1023,7 +1023,7 @@
         "id": "Bh5gn2hPylHQ",
         "outputId": "ae8bfc7b-6a13-4100-c00a-651a8481c049"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1089,7 +1089,7 @@
         "id": "qfyQHBH5ynia",
         "outputId": "9d4f8ce0-2f86-47e4-911e-399623610013"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1102,6 +1102,62 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# In age_rounder, height_rounder func we multiply values\n",
+        "# by some value this sometimes improve model CV score\n",
+        "# In Extract features we combine features to get new features\n",
+        "\n",
+        "def age_rounder(x):\n",
+        "    x_copy = x.copy()\n",
+        "    x_copy['Age'] = (x_copy['Age']*100).astype(np.uint16)\n",
+        "    return x_copy\n",
+        "\n",
+        "def height_rounder(x):\n",
+        "    x_copy = x.copy()\n",
+        "    x_copy['Height'] = (x_copy['Height']*100).astype(np.uint16)\n",
+        "    return x_copy\n",
+        "\n",
+        "def extract_features(x):\n",
+        "    x_copy = x.copy()\n",
+        "    x_copy['BMI'] = (x_copy['Weight']/x_copy['Height']**2)\n",
+        "#     x_copy['PseudoTarget'] = pd.cut(x_copy['BMI'],bins = [0,18.4,24.9,29,34.9,39.9,100],labels = [0,1,2,3,4,5],)\n",
+        "    return x_copy\n",
+        "\n",
+        "def col_rounder(x):\n",
+        "    x_copy = x.copy()\n",
+        "    cols_to_round = ['FCVC',\"NCP\",\"CH2O\",\"FAF\",\"TUE\"]\n",
+        "    for col in cols_to_round:\n",
+        "        x_copy[col] = round(x_copy[col])\n",
+        "        x_copy[col] = x_copy[col].astype('int')\n",
+        "    return x_copy\n",
+        "\n",
+        "AgeRounder = FunctionTransformer(age_rounder)\n",
+        "HeightRounder = FunctionTransformer(height_rounder)\n",
+        "ExtractFeatures = FunctionTransformer(extract_features)\n",
+        "ColumnRounder = FunctionTransformer(col_rounder)\n",
+        "\n",
+        "\n",
+        "# Using FeatureDropper we can drop columns. This is\n",
+        "# important if we want to pass different set of features\n",
+        "# for different models\n",
+        "\n",
+        "from sklearn.base import BaseEstimator, TransformerMixin\n",
+        "class FeatureDropper(BaseEstimator, TransformerMixin):\n",
+        "    def __init__(self, cols):\n",
+        "        self.cols = cols\n",
+        "    def fit(self,x,y):\n",
+        "        return self\n",
+        "    def transform(self, x):\n",
+        "        return x.drop(self.cols, axis = 1)"
+      ],
+      "metadata": {
+        "id": "iHdmX3LR0iTf"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
