Added feature engineering

--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -1158,6 +1158,72 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# In cross_val_model we cross vaidate models using\n",
+        "# Stratified K-Fold.\n",
+        "\n",
+        "# Encoding target values with int\n",
+        "target_mapping = {\n",
+        "                  'Insufficient_Weight':0,\n",
+        "                  'Normal_Weight':1,\n",
+        "                  'Overweight_Level_I':2,\n",
+        "                  'Overweight_Level_II':3,\n",
+        "                  'Obesity_Type_I':4,\n",
+        "                  'Obesity_Type_II':5 ,\n",
+        "                  'Obesity_Type_III':6\n",
+        "                  }\n",
+        "\n",
+        "# Define a method for Cross validation here we are using StartifiedKFold\n",
+        "skf = StratifiedKFold(n_splits=n_splits)\n",
+        "\n",
+        "def cross_val_model(estimators,cv = skf, verbose = True):\n",
+        "    '''\n",
+        "        estimators : pipeline consists preprocessing, encoder & model\n",
+        "        cv : Method for cross validation (default: StratifiedKfold)\n",
+        "        verbose : print train/valid score (yes/no)\n",
+        "    '''\n",
+        "\n",
+        "    X = train.copy()\n",
+        "    y = X.pop(TARGET)\n",
+        "\n",
+        "    y = y.map(target_mapping)\n",
+        "    test_predictions = np.zeros((len(test),7))\n",
+        "    valid_predictions = np.zeros((len(X),7))\n",
+        "\n",
+        "    val_scores, train_scores = [],[]\n",
+        "    for fold, (train_ind, valid_ind) in enumerate(skf.split(X,y)):\n",
+        "        model = clone(estimators)\n",
+        "        #define train set\n",
+        "        X_train = X.iloc[train_ind]\n",
+        "        y_train = y.iloc[train_ind]\n",
+        "        #define valid set\n",
+        "        X_valid = X.iloc[valid_ind]\n",
+        "        y_valid = y.iloc[valid_ind]\n",
+        "\n",
+        "        model.fit(X_train, y_train)\n",
+        "        if verbose:\n",
+        "            print(\"-\" * 100)\n",
+        "            print(f\"Fold: {fold}\")\n",
+        "            print(f\"Train Accuracy Score:-{accuracy_score(y_true=y_train,y_pred=model.predict(X_train))}\")\n",
+        "            print(f\"Valid Accuracy Score:-{accuracy_score(y_true=y_valid,y_pred=model.predict(X_valid))}\")\n",
+        "            print(\"-\" * 100)\n",
+        "\n",
+        "\n",
+        "        test_predictions += model.predict_proba(test)/cv.get_n_splits()\n",
+        "        valid_predictions[valid_ind] = model.predict_proba(X_valid)\n",
+        "        val_scores.append(accuracy_score(y_true=y_valid,y_pred=model.predict(X_valid)))\n",
+        "    if verbose:\n",
+        "        print(f\"Average Mean Accuracy Score:- {np.array(val_scores).mean()}\")\n",
+        "    return val_scores, valid_predictions, test_predictions"
+      ],
+      "metadata": {
+        "id": "dZd4Gl_fVh6a"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
