--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -1224,6 +1224,74 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Combine Orignal & Synthetic Data\n",
+        "\n",
+        "train.drop(['id'],axis = 1, inplace = True)\n",
+        "test_ids = test['id']\n",
+        "test.drop(['id'],axis = 1, inplace=True)\n",
+        "\n",
+        "train = pd.concat([train,train_org],axis = 0)\n",
+        "train = train.drop_duplicates()\n",
+        "train.reset_index(drop=True, inplace=True)\n",
+        "\n",
+        "# empty dataframe to store score, & train / test predictions.\n",
+        "score_list, oof_list, predict_list = pd.DataFrame(), pd.DataFrame(), pd.DataFrame()"
+      ],
+      "metadata": {
+        "id": "nIvYV3YX7yA3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Random Forest model"
+      ],
+      "metadata": {
+        "id": "ZtL1_sPpXPoc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define Random Forest Model Pipeline\n",
+        "\n",
+        "RFC = make_pipeline(\n",
+        "                        ExtractFeatures,\n",
+        "                        MEstimateEncoder(cols=['Gender','family_history_with_overweight','FAVC','CAEC',\n",
+        "                                           'SMOKE','SCC','CALC','MTRANS']),\n",
+        "                       RandomForestClassifier(random_state=RANDOM_SEED)\n",
+        "                    )"
+      ],
+      "metadata": {
+        "id": "s1LUyRj0WQZa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Execute Random Forest Pipeline\n",
+        "val_scores,val_predictions,test_predictions = cross_val_model(RFC)\n",
+        "\n",
+        "# Save train/test predictions in dataframes\n",
+        "for k,v in target_mapping.items():\n",
+        "    oof_list[f\"rfc_{k}\"] = val_predictions[:,v]\n",
+        "\n",
+        "for k,v in target_mapping.items():\n",
+        "    predict_list[f\"rfc_{k}\"] = test_predictions[:,v]"
+      ],
+      "metadata": {
+        "id": "gAAKapNTXNJd"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
