--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -1292,6 +1292,82 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define Optuna Function To Tune LGBM Model\n",
+        "\n",
+        "def lgbm_objective(trial):\n",
+        "    params = {\n",
+        "        'learning_rate' : trial.suggest_float('learning_rate', .001, .1, log = True),\n",
+        "        'max_depth' : trial.suggest_int('max_depth', 2, 20),\n",
+        "        'subsample' : trial.suggest_float('subsample', .5, 1),\n",
+        "        'min_child_weight' : trial.suggest_float('min_child_weight', .1, 15, log = True),\n",
+        "        'reg_lambda' : trial.suggest_float('reg_lambda', .1, 20, log = True),\n",
+        "        'reg_alpha' : trial.suggest_float('reg_alpha', .1, 10, log = True),\n",
+        "        'n_estimators' : 1000,\n",
+        "        'random_state' : RANDOM_SEED,\n",
+        "        'device_type' : \"gpu\",\n",
+        "        'num_leaves': trial.suggest_int('num_leaves', 10, 1000),\n",
+        "\n",
+        "        #'boosting_type' : 'dart',\n",
+        "    }\n",
+        "\n",
+        "    optuna_model = make_pipeline(\n",
+        "                                 ExtractFeatures,\n",
+        "                                 MEstimateEncoder(cols=['Gender','family_history_with_overweight','FAVC','CAEC',\n",
+        "                                           'SMOKE','SCC','CALC','MTRANS']),\n",
+        "                                LGBMClassifier(**params,verbose=-1)\n",
+        "                                )\n",
+        "    val_scores, _, _ = cross_val_model(optuna_model,verbose = False)\n",
+        "    return np.array(val_scores).mean()\n",
+        "\n",
+        "lgbm_study = optuna.create_study(direction = 'maximize',study_name=\"LGBM\")"
+      ],
+      "metadata": {
+        "id": "KKXnx1vjXUG0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Execute LGBM Tuning, To Tune set `TUNE` to True (it will take a long time)\n",
+        "TUNE = False\n",
+        "\n",
+        "warnings.filterwarnings(\"ignore\")\n",
+        "if TUNE:\n",
+        "    lgbm_study.optimize(lgbm_objective, 50)"
+      ],
+      "metadata": {
+        "id": "HwpIsQHY1AEf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numerical_columns = train.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
+        "categorical_columns = train.select_dtypes(include=['object']).columns.tolist()\n",
+        "categorical_columns.remove('NObeyesdad')"
+      ],
+      "metadata": {
+        "id": "ZBs2Jhmh1Bek"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HucF99A_1DMY"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
