--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -1362,9 +1362,63 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Here we defined LGBM Pipeline\n",
+        "# Where we use One_Hot_Encoder, for categorical encoding\n",
+        "# standard scaler for numerical column scaling\n",
+        "\n",
+        "\n",
+        "params = {'learning_rate': 0.04325905707439143, 'max_depth': 4,\n",
+        "          'subsample': 0.6115083405793659, 'min_child_weight': 0.43633356137010687,\n",
+        "          'reg_lambda': 9.231766981717822, 'reg_alpha': 1.875987414096491, 'num_leaves': 373,\n",
+        "          'n_estimators' : 1000,'random_state' : RANDOM_SEED, 'device_type' : \"gpu\",\n",
+        "         }\n",
+        "\n",
+        "best_params = {\n",
+        "    \"objective\": \"multiclass\",          # Objective function for the model\n",
+        "    \"metric\": \"multi_logloss\",          # Evaluation metric\n",
+        "    \"verbosity\": -1,                    # Verbosity level (-1 for silent)\n",
+        "    \"boosting_type\": \"gbdt\",            # Gradient boosting type\n",
+        "    \"random_state\": 42,       # Random state for reproducibility\n",
+        "    \"num_class\": 7,                     # Number of classes in the dataset\n",
+        "    'learning_rate': 0.030962211546832760,  # Learning rate for gradient boosting\n",
+        "    'n_estimators': 500,                # Number of boosting iterations\n",
+        "    'lambda_l1': 0.009667446568254372,  # L1 regularization term\n",
+        "    'lambda_l2': 0.04018641437301800,   # L2 regularization term\n",
+        "    'max_depth': 10,                    # Maximum depth of the trees\n",
+        "    'colsample_bytree': 0.40977129346872643,  # Fraction of features to consider for each tree\n",
+        "    'subsample': 0.9535797422450176,    # Fraction of samples to consider for each boosting iteration\n",
+        "    'min_child_samples': 26             # Minimum number of data needed in a leaf\n",
+        "}\n",
+        "\n",
+        "lgbm = make_pipeline(\n",
+        "                        ColumnTransformer(\n",
+        "                        transformers=[('num', StandardScaler(), numerical_columns),\n",
+        "                                  ('cat', OneHotEncoder(handle_unknown=\"ignore\"), categorical_columns)]),\n",
+        "                        LGBMClassifier(**best_params,verbose=-1)\n",
+        "                    )"
+      ],
       "metadata": {
         "id": "HucF99A_1DMY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Train LGBM Model\n",
+        "\n",
+        "val_scores,val_predictions,test_predictions = cross_val_model(lgbm)\n",
+        "\n",
+        "for k,v in target_mapping.items():\n",
+        "    oof_list[f\"lgbm_{k}\"] = val_predictions[:,v]\n",
+        "\n",
+        "for k,v in target_mapping.items():\n",
+        "    predict_list[f\"lgbm_{k}\"] = test_predictions[:,v]\n"
+      ],
+      "metadata": {
+        "id": "DuwLDlXDHWRk"
       },
       "execution_count": null,
       "outputs": []
