--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -1422,6 +1422,57 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Optuna study for XGB Model\n",
+        "def xgb_objective(trial):\n",
+        "    params = {\n",
+        "        'grow_policy': trial.suggest_categorical('grow_policy', [\"depthwise\", \"lossguide\"]),\n",
+        "        'n_estimators': trial.suggest_int('n_estimators', 100, 2000),\n",
+        "        'learning_rate': trial.suggest_float('learning_rate', 0.01, 1.0),\n",
+        "        'gamma' : trial.suggest_float('gamma', 1e-9, 1.0),\n",
+        "        'subsample': trial.suggest_float('subsample', 0.25, 1.0),\n",
+        "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.25, 1.0),\n",
+        "        'max_depth': trial.suggest_int('max_depth', 0, 24),\n",
+        "        'min_child_weight': trial.suggest_int('min_child_weight', 1, 30),\n",
+        "        'reg_lambda': trial.suggest_float('reg_lambda', 1e-9, 10.0, log=True),\n",
+        "        'reg_alpha': trial.suggest_float('reg_alpha', 1e-9, 10.0, log=True),\n",
+        "    }\n",
+        "\n",
+        "    params['booster'] = 'gbtree'\n",
+        "    params['objective'] = 'multi:softmax'\n",
+        "    params[\"device\"] = \"cuda\"\n",
+        "    params[\"verbosity\"] = 0\n",
+        "    params['tree_method'] = \"gpu_hist\"\n",
+        "\n",
+        "\n",
+        "    optuna_model = make_pipeline(\n",
+        "                    MEstimateEncoder(cols=['Gender','family_history_with_overweight','FAVC','CAEC',\n",
+        "                                           'SMOKE','SCC','CALC','MTRANS']),\n",
+        "                    XGBClassifier(**params,seed=RANDOM_SEED)\n",
+        "                   )\n",
+        "\n",
+        "    val_scores, _, _ = cross_val_model(optuna_model,verbose = False)\n",
+        "    return np.array(val_scores).mean()\n",
+        "\n",
+        "xgb_study = optuna.create_study(direction = 'maximize')"
+      ],
+      "metadata": {
+        "id": "_uP_iUMSHX2q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "oJQ3r5-AWB_v"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
