--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -1467,9 +1467,61 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Tune using Optuna\n",
+        "TUNE = False\n",
+        "if TUNE:\n",
+        "    xgb_study.optimize(xgb_objective, 50)"
+      ],
       "metadata": {
         "id": "oJQ3r5-AWB_v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# XGB Pipeline\n",
+        "\n",
+        "params = {\n",
+        "    'n_estimators': 1312,\n",
+        "    'learning_rate': 0.018279520260162645,\n",
+        "    'gamma': 0.0024196354156454324,\n",
+        "    'reg_alpha': 0.9025931173755949,\n",
+        "    'reg_lambda': 0.06835667255875388,\n",
+        "    'max_depth': 5,\n",
+        "    'min_child_weight': 5,\n",
+        "    'subsample': 0.883274050086088,\n",
+        "    'colsample_bytree': 0.6579828557036317\n",
+        "}\n",
+        "# {'eta': 0.018387615982905264, 'max_depth': 29, 'subsample': 0.8149303101087905, 'colsample_bytree': 0.26750463604831476, 'min_child_weight': 0.5292380065098192, 'reg_lambda': 0.18952063379457604, 'reg_alpha': 0.7201451827004944}\n",
+        "\n",
+        "params = {'grow_policy': 'depthwise', 'n_estimators': 690,\n",
+        "               'learning_rate': 0.31829021594473056, 'gamma': 0.6061120644431842,\n",
+        "               'subsample': 0.9032243794829076, 'colsample_bytree': 0.44474031945048287,\n",
+        "               'max_depth': 10, 'min_child_weight': 22, 'reg_lambda': 4.42638097284094,\n",
+        "               'reg_alpha': 5.927900973354344e-07,'seed':RANDOM_SEED}\n",
+        "\n",
+        "best_params = {'grow_policy': 'depthwise', 'n_estimators': 982,\n",
+        "               'learning_rate': 0.050053726931263504, 'gamma': 0.5354391952653927,\n",
+        "               'subsample': 0.7060590452456204, 'colsample_bytree': 0.37939433412123275,\n",
+        "               'max_depth': 23, 'min_child_weight': 21, 'reg_lambda': 9.150224029846654e-08,\n",
+        "               'reg_alpha': 5.671063656994295e-08}\n",
+        "best_params['booster'] = 'gbtree'\n",
+        "best_params['objective'] = 'multi:softmax'\n",
+        "best_params[\"device\"] = \"cuda\"\n",
+        "best_params[\"verbosity\"] = 0\n",
+        "best_params['tree_method'] = \"gpu_hist\"\n",
+        "\n",
+        "XGB = make_pipeline(\n",
+        "                    MEstimateEncoder(cols=['Gender','family_history_with_overweight','FAVC','CAEC',\n",
+        "                                           'SMOKE','SCC','CALC','MTRANS']),\n",
+        "                    XGBClassifier(**best_params,seed=RANDOM_SEED)\n",
+        "                   )"
+      ],
+      "metadata": {
+        "id": "1Sl63H0wbaBZ"
       },
       "execution_count": null,
       "outputs": []
