--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -1525,6 +1525,61 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "val_scores,val_predictions,test_predictions = cross_val_model(XGB)\n",
+        "\n",
+        "for k,v in target_mapping .items():\n",
+        "    oof_list[f\"xgb_{k}\"] = val_predictions[:,v]\n",
+        "\n",
+        "for k,v in target_mapping.items():\n",
+        "    predict_list[f\"xgb_{k}\"] = test_predictions[:,v]"
+      ],
+      "metadata": {
+        "id": "n0dJH5Okbg-d"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Optuna Function For Catboost Model\n",
+        "def cat_objective(trial):\n",
+        "\n",
+        "    params = {\n",
+        "\n",
+        "        'iterations': 1000,  # High number of estimators\n",
+        "        'learning_rate': trial.suggest_float('learning_rate', 0.01, 0.3),\n",
+        "        'depth': trial.suggest_int('depth', 3, 10),\n",
+        "        'l2_leaf_reg': trial.suggest_float('l2_leaf_reg', 0.01, 10.0),\n",
+        "        'bagging_temperature': trial.suggest_float('bagging_temperature', 0.0, 1.0),\n",
+        "        'random_seed': RANDOM_SEED,\n",
+        "        'verbose': False,\n",
+        "        'task_type':\"GPU\"\n",
+        "    }\n",
+        "\n",
+        "    cat_features = ['Gender','family_history_with_overweight','FAVC','FCVC','NCP',\n",
+        "                'CAEC','SMOKE','CH2O','SCC','FAF','TUE','CALC','MTRANS']\n",
+        "    optuna_model = make_pipeline(\n",
+        "                        ExtractFeatures,\n",
+        "#                         AgeRounder,\n",
+        "#                         HeightRounder,\n",
+        "#                         MEstimateEncoder(cols = raw_cat_cols),\n",
+        "                        CatBoostClassifier(**params,cat_features=cat_features)\n",
+        "                        )\n",
+        "    val_scores,_,_ = cross_val_model(optuna_model,verbose = False)\n",
+        "    return np.array(val_scores).mean()\n",
+        "\n",
+        "cat_study = optuna.create_study(direction = 'maximize')"
+      ],
+      "metadata": {
+        "id": "Q2MCi3Utj7to"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
