--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -1580,6 +1580,39 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "params = {'learning_rate': 0.13762007048684638, 'depth': 5,\n",
+        "          'l2_leaf_reg': 5.285199432056192, 'bagging_temperature': 0.6029582154263095,\n",
+        "         'random_seed': RANDOM_SEED,\n",
+        "        'verbose': False,\n",
+        "        'task_type':\"GPU\",\n",
+        "         'iterations':1000}\n"
+      ],
+      "metadata": {
+        "id": "hmatoRrikBB1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Train Catboost Model\n",
+        "val_scores,val_predictions,test_predictions = cross_val_model(CB)\n",
+        "for k,v in target_mapping.items():\n",
+        "    oof_list[f\"cat_{k}\"] = val_predictions[:,v]\n",
+        "\n",
+        "for k,v in target_mapping.items():\n",
+        "    predict_list[f\"cat_{k}\"] = test_predictions[:,v]"
+      ],
+      "metadata": {
+        "id": "udLGHiCwKpS0"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
